@@ -130,9 +130,9 @@ extern "C" {
 #ifndef XSLT_LOCALE_XLOCALE
 #define XSLT_LOCALE_XLOCALE
 #endif
-#elif @XSLT_LOCALE_MSVCRT@
-#ifndef XSLT_LOCALE_MSVCRT
-#define XSLT_LOCALE_MSVCRT
+#elif @XSLT_LOCALE_WINAPI@
+#ifndef XSLT_LOCALE_WINAPI
+#define XSLT_LOCALE_WINAPI
 #endif
 #endif
 
